--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,6 +1,5 @@
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
+  --mantine-color-body: var(--mantine-color-mainGreen-6) !important;
 }
 
 html,
@@ -10,8 +9,6 @@ body {
 }
 
 body {
-  color: var(--foreground);
-  background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
