--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,8 +1,10 @@
-@import url("https://fonts.googleapis.com/css2?family=Gasoek+One&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Gasoek+One&family=Poppins:wght@400;900&family=Roboto:wght@400;700&display=swap");
 
 :root {
   --mantine-color-body: var(--mantine-color-mainGreen-6) !important;
   --hero-header: "Gasoek One", sans-serif;
+  --Poppins: "Poppins", sans-serif;
+  --Roboto: "Roboto", sans-serif;
 }
 
 html,
