--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -9,6 +9,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  max-width: 1920px;
 }
 
 .link {
@@ -22,12 +23,12 @@
   font-weight: 600;
   transition: all 0.4s ease-in-out;
 
-  @mixin hover {
+  &:hover {
     box-shadow: inset 0px -1px 0px 0px var(--mantine-color-mainGreen-9);
     border-radius: 0;
   }
 
-  [data-mantine-color-scheme] &[data-active] {
+  &[data-active] {
     box-shadow: inset 0px 0px 0px 1px var(--mantine-color-mainGreen-9);
     color: var(--mantine-color-mainGreen-9);
   }
