--- a/src/components/Hero/Hero.module.scss
+++ b/src/components/Hero/Hero.module.scss
@@ -1,22 +1,23 @@
 .hero {
   position: relative;
-  background-size: cover;
-  background-position: center;
 }
 
 .container {
-  height: rem(700px);
+  height: rem(600px);
   display: flex;
   flex-direction: column;
-  justify-content: flex-end;
   align-items: flex-start;
-  padding-bottom: calc(var(--mantine-spacing-xl) * 6);
   z-index: 1;
   position: relative;
+  padding-left: 15rem;
 
-  @media (max-width: $mantine-breakpoint-sm) {
-    height: rem(500px);
-    padding-bottom: calc(var(--mantine-spacing-xl) * 3);
+  @media (max-width: $mantine-breakpoint-md) {
+    padding-left: 5rem;
+  }
+
+  @media (max-width: $mantine-breakpoint-xs) {
+    padding-left: 0;
+    align-items: center;
   }
 }
 
@@ -25,17 +26,30 @@
   font-weight: 900;
   line-height: 1.1;
   font-family: var(--hero-header);
-  transition: all 0.2s ease-in-out;
   user-select: none;
+}
+
+.title1 {
+  @media (max-width: $mantine-breakpoint-md) {
+    font-size: rem(100px);
+  }
 
   @media (max-width: $mantine-breakpoint-sm) {
-    font-size: rem(40px);
-    line-height: 1.2;
+    font-size: rem(60px);
   }
 
   @media (max-width: $mantine-breakpoint-xs) {
-    font-size: rem(28px);
-    line-height: 1.3;
+    font-size: rem(50px);
+  }
+}
+
+.title2 {
+  @media (max-width: $mantine-breakpoint-sm) {
+    font-size: rem(50px);
+  }
+
+  @media (max-width: $mantine-breakpoint-xs) {
+    font-size: rem(50px);
   }
 }
 
@@ -47,9 +61,18 @@
     max-width: 100%;
     font-size: var(--mantine-font-size-sm);
   }
+
+  @media (max-width: $mantine-breakpoint-xs) {
+    text-align: center;
+  }
 }
 
-.title_group .title:hover {
+.title_group .title span {
+  transition: all 0.2s ease-in-out;
+}
+
+.title_group .title span:hover {
+  transition: all 0.2s ease-in-out;
   transform: translateY(-5%);
   color: var(--mantine-color-orange-6);
 }
@@ -85,10 +108,17 @@
   bottom: -10%;
   width: 100%;
   aspect-ratio: 1.7/1;
-  /* background-color: red; */
   filter: brightness(0.8) contrast(126%) saturate(200%);
   max-width: 1400px;
   margin: 0 auto;
+
+  @media (max-width: $mantine-breakpoint-sm) {
+    width: 150%;
+  }
+
+  @media (max-width: $mantine-breakpoint-xs) {
+    width: 175%;
+  }
 }
 
 .hero_img_group img {
@@ -146,8 +176,7 @@
 }
 
 .scroll_icon {
-  left: 10%;
-  bottom: -2vw;
+  bottom: 5%;
   width: 120px;
   position: absolute;
   display: flow-root;
