--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -1,7 +1,11 @@
 .header {
   height: rem(56px);
-  background-color: var(--mantine-color-body);
+  // background-color: var(--mantine-color-body);
   z-index: 99;
+  padding: 2rem 0 0;
+  margin: 2rem 0 0;
+  position: sticky;
+  top: 2rem;
 }
 
 .inner {
