--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -37,3 +37,39 @@
     color: var(--mantine-color-mainGreen-9);
   }
 }
+
+.mantine-Drawer-content {
+  background-color: #ffffff;
+}
+
+.mobile_menu div {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 1.5rem;
+  width: 100vw;
+}
+
+.mobile_menu img {
+  margin-bottom: 3rem;
+}
+
+.drawerLink {
+  display: block;
+  line-height: 1;
+  padding: rem(8px) rem(12px);
+  border-radius: var(--mantine-radius-sm);
+  text-decoration: none;
+  font-size: var(--mantine-font-size-s);
+  font-weight: 600;
+  transition: all 0.4s ease-in-out;
+}
+
+.drawerLink:hover {
+  box-shadow: inset 0px -1px 0px 0px var(--mantine-color-mainGreen-9);
+  border-radius: 0;
+}
+
+.drawerLink[data-active] {
+  box-shadow: inset 0px 0px 0px 1px var(--mantine-color-mainGreen-9);
+}
