--- a/src/components/AboutMeSection/AboutMeSection.module.scss
+++ b/src/components/AboutMeSection/AboutMeSection.module.scss
@@ -6,29 +6,63 @@
   gap: rem(97px);
   max-height: rem(538px);
   position: relative;
-  margin-bottom: 10.75rem;
+  margin-bottom: 8rem;
+
+  @media (max-width: $mantine-breakpoint-md) {
+    flex-direction: column-reverse;
+    align-items: center;
+    max-height: none;
+  }
 }
 
 .about_me_img {
   border-radius: 30px;
   height: auto;
   width: rem(394px);
+
+  @media (max-width: $mantine-breakpoint-md) {
+    width: 100%;
+  }
 }
 
-.about_me_description {
+.about_me_description_container {
   display: flex;
   justify-content: flex-start;
   align-items: start;
   flex-direction: column;
   max-width: rem(626px);
   font-family: var(--Poppins);
+
+  @media (max-width: $mantine-breakpoint-md) {
+    align-items: center;
+  }
+}
+
+.about_me_description {
   font-size: rem(24px);
+
+  @media (max-width: $mantine-breakpoint-md) {
+    font-size: rem(20px);
+  }
+
+  @media (max-width: $mantine-breakpoint-sm) {
+    font-size: rem(18px);
+  }
+
+  @media (max-width: $mantine-breakpoint-xs) {
+    font-size: rem(16px);
+  }
 }
 
 .about_deco_1 {
   position: absolute;
-  bottom: 0;
+  bottom: -15%;
   right: 0;
   width: auto !important;
-  height: 50%;
+  height: 20vw;
+  max-height: 375px;
+
+  @media (max-width: $mantine-breakpoint-md) {
+    display: none;
+  }
 }
