--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -1,11 +1,20 @@
 .footer {
-  width: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: flex-start;
-  flex-direction: row;
-  position: relative;
-  margin-bottom: 10.75rem;
+  // width: 100%;
+  // display: flex;
+  // justify-content: center;
+  // align-items: flex-start;
+  // flex-direction: row;
+  // position: relative;
+  // margin-bottom: 10.75rem;
+  // gap: rem(97px);
+  display: grid;
+  grid: 1fr / 1fr 1fr;
+  gap: rem(97px);
+
+  @media (max-width: $mantine-breakpoint-md) {
+    grid: 1fr 1fr / 1fr;
+    gap: rem(40px);
+  }
 }
 
 .footer_info {
@@ -14,6 +23,11 @@
   align-items: flex-end;
   flex-direction: column;
   height: 100%;
+
+  @media (max-width: $mantine-breakpoint-md) {
+    grid-row: 2;
+    align-items: flex-start;
+  }
 }
 
 .footer_title {
@@ -24,8 +38,31 @@
   max-width: rem(626px);
   font-family: var(--Poppins);
   width: 100%;
+  @media (max-width: $mantine-breakpoint-md) {
+    grid-row: 1;
+  }
 }
 
 .footer_title > h2:first-of-type {
-  font-size: rem(96px);
+  font-size: 6rem;
+  line-height: 5rem;
+
+  @media (max-width: $mantine-breakpoint-md) {
+    font-size: 5rem;
+    line-height: auto;
+  }
+
+  @media (max-width: $mantine-breakpoint-xs) {
+    font-size: 4rem;
+    line-height: auto;
+  }
+}
+
+.copyright {
+  color: var(--mantine-color-mainGreen-3);
+  font-size: 0.875rem;
+  font-family: var(--Poppins);
+  text-align: center;
+  margin-bottom: 2rem;
+  grid-column: 1 / -1;
 }
