--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -66,19 +66,21 @@
 .drawerLink {
   display: block;
   line-height: 1;
-  padding: rem(8px) rem(12px);
+  padding: 0.5rem 1rem;
   border-radius: var(--mantine-radius-sm);
   text-decoration: none;
   font-size: var(--mantine-font-size-s);
   font-weight: 600;
   transition: all 0.4s ease-in-out;
-}
 
-.drawerLink:hover {
-  box-shadow: inset 0px -1px 0px 0px var(--mantine-color-mainGreen-9);
-  border-radius: 0;
-}
+  &:hover {
+    box-shadow: inset 0px -1px 0px 0px var(--mantine-color-mainGreen-9);
+    border-radius: 0;
+  }
 
-.drawerLink[data-active] {
-  box-shadow: inset 0px 0px 0px 1px var(--mantine-color-mainGreen-9);
+  &[data-active] {
+    box-shadow: inset 0px 0px 0px 1px var(--mantine-color-mainGreen-9);
+    color: var(--mantine-color-mainGreen-9);
+    background-color: transparent;
+  }
 }
