--- a/src/components/Hero/Hero.module.scss
+++ b/src/components/Hero/Hero.module.scss
@@ -215,7 +215,7 @@
 }
 
 .scroll_svg {
-  animation: rotata 31s infinite linear;
+  animation: rotate 31s infinite linear;
   transform: translate(0%, 0%);
   max-width: 100%;
   height: auto;
@@ -228,7 +228,7 @@
   }
 }
 
-@keyframes rotata {
+@keyframes rotate {
   0% {
     transform: translate(0%, 0%) rotate(0deg);
   }
