--- a/src/components/common/SectionContainer/SectionContainer.module.scss
+++ b/src/components/common/SectionContainer/SectionContainer.module.scss
@@ -22,7 +22,7 @@
     text-align: center;
   }
 
-  @media (max-width: $mantine-breakpoint-xs) {
+  @media (max-width: $mantine-breakpoint-sm) {
     padding: 5rem 1rem 1rem;
   }
 }
