--- a/src/components/FoodSection/FoodSection.module.scss
+++ b/src/components/FoodSection/FoodSection.module.scss
@@ -88,24 +88,24 @@
   font-size: rem(24px);
 }
 
-.small_card:hover {
-  .image_container {
-    transform: translateY(-30%);
-    width: 100%;
-    height: 60%;
-    transition-delay: 0s;
-  }
+// .small_card:hover {
+//   .image_container {
+//     transform: translateY(-30%);
+//     width: 100%;
+//     height: 60%;
+//     transition-delay: 0s;
+//   }
 
-  .small_card_title {
-    transform: translateY(-230%);
-    transition-delay: 0s;
-  }
+//   .small_card_title {
+//     transform: translateY(-230%);
+//     transition-delay: 0s;
+//   }
 
-  .food_list {
-    opacity: 1;
-    transition: 0.4s ease-in-out 0.4s;
-  }
-}
+//   .food_list {
+//     opacity: 1;
+//     transition: 0.4s ease-in-out 0.4s;
+//   }
+// }
 
 .centered {
   .image_container {
