--- a/src/components/common/SectionContainer/SectionContainer.module.scss
+++ b/src/components/common/SectionContainer/SectionContainer.module.scss
@@ -1,5 +1,5 @@
 .box {
-  width: 100%;
+  // height: 100vh;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -8,6 +8,8 @@
   border-radius: var(--mantine-radius-xl);
   position: relative;
   overflow: hidden;
+  position: sticky;
+  top: 0;
 }
 
 .container {
