--- a/src/components/common/SectionContainer/SectionContainer.module.scss
+++ b/src/components/common/SectionContainer/SectionContainer.module.scss
@@ -1,5 +1,4 @@
 .box {
-  // height: 100vh;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -8,8 +7,7 @@
   border-radius: var(--mantine-radius-xl);
   position: relative;
   overflow: hidden;
-  position: sticky;
-  top: 0;
+  width: 100%;
 }
 
 .container {
