feat: Adjust scroll container animations

--- a/src/components/common/SectionContainer/SectionContainer.module.scss
+++ b/src/components/common/SectionContainer/SectionContainer.module.scss
@@ -6,16 +6,17 @@
   margin-bottom: -3rem;
   border-radius: var(--mantine-radius-xl);
   position: relative;
+  // position: sticky;
+  // top: 0;
   overflow: hidden;
-  width: 100%;
 }
 
 .container {
-  // border: 1px solid black;
   margin: 0 auto;
   max-width: 1920px;
   width: 100%;
-  position: relative;
+  position: sticky;
+  top: 0;
   padding: rem(160px) 2rem 1rem;
 
   h2 {
@@ -30,15 +31,15 @@
 .box_gallery {
   padding: 0;
   overflow: hidden;
+
+  & > div {
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    max-width: none;
+  }
 }
 
 .box_footer {
   border-radius: var(--mantine-radius-xl) var(--mantine-radius-xl) 0 0;
-}
-
-.box_gallery > div {
-  margin: 0;
-  padding: 0;
-  width: 100%;
-  max-width: none;
 }
