--- a/src/components/FoodSection/FoodSection.module.scss
+++ b/src/components/FoodSection/FoodSection.module.scss
@@ -1,23 +1,10 @@
-.sticky_container {
-  position: sticky;
-  top: 0;
-  height: 100vh;
-  width: 100%;
-  overflow: hidden;
-}
-
-.content_wrapper {
+.wrapper {
   position: relative;
-  height: 100vh;
-  width: 100%;
 }
 
-.title_sticky {
+.sticky {
   position: sticky;
-  top: 2rem;
-  // padding: 0 rem(165px);
-  margin-bottom: 2rem;
-  z-index: 10;
+  top: 10rem;
 }
 
 .cards_section {
@@ -25,13 +12,17 @@
   justify-content: flex-start;
   align-items: center;
   gap: rem(97px);
-  position: relative;
   flex-wrap: nowrap;
   padding-left: rem(165px);
   padding-right: rem(165px);
   height: calc(100vh - 16rem);
   width: max-content;
   will-change: transform;
+}
+
+.cards_section_overflow {
+  overflow: hidden;
+  width: 100vw;
 }
 
 .small_card {
@@ -87,25 +78,6 @@
   user-select: none;
   font-size: rem(24px);
 }
-
-// .small_card:hover {
-//   .image_container {
-//     transform: translateY(-30%);
-//     width: 100%;
-//     height: 60%;
-//     transition-delay: 0s;
-//   }
-
-//   .small_card_title {
-//     transform: translateY(-230%);
-//     transition-delay: 0s;
-//   }
-
-//   .food_list {
-//     opacity: 1;
-//     transition: 0.4s ease-in-out 0.4s;
-//   }
-// }
 
 .centered {
   .image_container {
