--- a/src/components/FoodSection/FoodSection.module.scss
+++ b/src/components/FoodSection/FoodSection.module.scss
@@ -1,10 +1,15 @@
 .wrapper {
   position: relative;
+  width: 100%;
 }
 
 .sticky {
   position: sticky;
   top: 10rem;
+
+  @media (max-width: 768px) {
+    top: 5rem;
+  }
 }
 
 .cards_section {
@@ -18,11 +23,30 @@
   height: calc(100vh - 16rem);
   width: max-content;
   will-change: transform;
+
+  @media (max-width: 1024px) {
+    gap: rem(60px);
+    padding-left: rem(100px);
+    padding-right: rem(100px);
+    height: calc(100vh - 12rem);
+  }
+
+  @media (max-width: 768px) {
+    gap: rem(40px);
+    padding-left: rem(50px);
+    padding-right: rem(50px);
+    height: calc(100vh - 8rem);
+  }
 }
 
 .cards_section_overflow {
   overflow: hidden;
-  width: calc(100vw - 2rem);
+  width: 100vw;
+  margin-left: -2rem;
+
+  @media (max-width: 768px) {
+    width: calc(100vw + 2rem);
+  }
 }
 
 .small_card {
@@ -33,6 +57,20 @@
   height: rem(650px);
   max-height: rem(650px);
   flex-shrink: 0;
+
+  @media (max-width: 1024px) {
+    width: rem(400px);
+    height: rem(500px);
+    max-height: rem(500px);
+    padding: 40px 0px;
+  }
+
+  @media (max-width: 768px) {
+    width: rem(300px);
+    height: rem(400px);
+    max-height: rem(400px);
+    padding: 30px 0px;
+  }
 }
 
 .image_container {
@@ -48,11 +86,25 @@
   display: flex;
   align-items: flex-start;
   justify-content: center;
+
+  @media (max-width: 1024px) {
+    width: rem(300px);
+    height: rem(300px);
+  }
+
+  @media (max-width: 768px) {
+    width: rem(220px);
+    height: rem(220px);
+  }
 }
 
 .small_card_img {
   width: 110%;
   position: absolute;
+
+  @media (max-width: 768px) {
+    width: 120%;
+  }
 }
 
 .small_card_title {
@@ -65,6 +117,18 @@
   font-size: rem(38px);
   transform: translateY(0%);
   transition: 0.4s ease-in-out 0.4s;
+
+  @media (max-width: 1024px) {
+    margin-top: rem(24px);
+    margin-left: rem(40px);
+    font-size: rem(32px);
+  }
+
+  @media (max-width: 768px) {
+    margin-top: rem(16px);
+    margin-left: rem(24px);
+    font-size: rem(24px);
+  }
 }
 
 .food_list {
@@ -77,6 +141,18 @@
   font-family: var(--Roboto);
   user-select: none;
   font-size: rem(24px);
+
+  @media (max-width: 1024px) {
+    margin-left: rem(40px);
+    margin-right: rem(40px);
+    font-size: rem(20px);
+  }
+
+  @media (max-width: 768px) {
+    margin-left: rem(24px);
+    margin-right: rem(24px);
+    font-size: rem(16px);
+  }
 }
 
 .centered {
@@ -85,11 +161,20 @@
     width: 100%;
     height: 60%;
     transition-delay: 0s;
+
+    @media (max-width: 768px) {
+      transform: translateY(-20%);
+      height: 50%;
+    }
   }
 
   .small_card_title {
     transform: translateY(-230%);
     transition-delay: 0s;
+
+    @media (max-width: 768px) {
+      transform: translateY(-180%);
+    }
   }
 
   .food_list {
