--- a/src/components/Gallery/Gallery.module.scss
+++ b/src/components/Gallery/Gallery.module.scss
@@ -1,26 +1,57 @@
-.gallery_wrapper {
+.gallery_container {
+  position: relative;
+  overflow: visible;
+}
+
+.sticky_section {
+  position: sticky;
+  top: 0;
+  height: 100vh;
+  overflow: hidden;
+}
+
+.base {
+  display: flex;
   width: 100%;
   height: 100%;
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  grid-template-rows: 1fr;
-  grid-column-gap: 0px;
-  grid-row-gap: 0px;
+}
 
-  @media (max-width: $mantine-breakpoint-md) {
-    grid-template-columns: 1fr;
-    grid-template-rows: 1fr;
-    position: relative;
-    overflow: hidden;
-    height: 100vw;
+.base_left,
+.base_right {
+  width: 50%;
+  height: 100%;
+  overflow: hidden;
+  position: relative;
 
-    img {
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      object-fit: cover;
-    }
+  img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
   }
+}
+
+.overlap_image {
+  position: absolute;
+  width: 50%;
+  height: 100%;
+  top: 0;
+  z-index: 2;
+
+  img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+}
+
+.left {
+  left: 0;
+}
+
+.right {
+  right: 0;
+}
+
+.spacer {
+  width: 100%;
 }
