feat: Set one image in row on smaleller width for gallery

--- a/src/components/Gallery/Gallery.module.scss
+++ b/src/components/Gallery/Gallery.module.scss
@@ -55,3 +55,27 @@
 .spacer {
   width: 100%;
 }
+
+@media (max-width: $mantine-breakpoint-md) {
+  .base {
+    flex-direction: column;
+  }
+
+  .base_right {
+    display: none;
+  }
+
+  .base_left {
+    width: 100%;
+  }
+
+  .overlap_image {
+    width: 100%;
+  }
+
+  .left,
+  .right {
+    left: 0;
+    right: 0;
+  }
+}
