feat: Smaller styling changes

--- a/src/components/FoodSection/FoodSection.module.scss
+++ b/src/components/FoodSection/FoodSection.module.scss
@@ -119,13 +119,12 @@
   transition: 0.4s ease-in-out 0.4s;
 
   @media (max-width: 1024px) {
-    margin-top: rem(24px);
     margin-left: rem(40px);
     font-size: rem(32px);
   }
 
   @media (max-width: 768px) {
-    margin-top: rem(16px);
+    margin-top: rem(30px);
     margin-left: rem(24px);
     font-size: rem(24px);
   }
@@ -152,6 +151,7 @@
     margin-left: rem(24px);
     margin-right: rem(24px);
     font-size: rem(16px);
+    top: 55%;
   }
 }
 
