--- a/src/components/common/SectionContainer/SectionContainer.module.scss
+++ b/src/components/common/SectionContainer/SectionContainer.module.scss
@@ -49,13 +49,12 @@
   border-radius: var(--mantine-radius-xl) var(--mantine-radius-xl) 0 0;
   position: sticky;
   bottom: 0;
-  z-index: -1;
+  z-index: -2;
 }
 
 .hero {
-  top: 1;
   overflow: hidden;
-  position: sticky;
-  top: 4rem;
-  z-index: 1;
+  // position: sticky;
+  // top: 4rem;
+  z-index: -1;
 }
