--- a/src/components/WhySection/WhySection.module.scss
+++ b/src/components/WhySection/WhySection.module.scss
@@ -1,13 +1,13 @@
 .points {
   height: 100%;
   position: relative;
-  max-width: 585px;
+  max-width: 600px;
   padding-bottom: rem(380px);
   padding-top: rem(160px);
   grid-template-columns: auto;
   grid-template-rows: repeat(5, 1fr);
   display: grid;
-  grid-gap: 4.25em;
+  grid-gap: 5rem;
   margin: 0 auto;
 
   @media (max-width: $mantine-breakpoint-lg) {
@@ -51,15 +51,6 @@
       text-align: left;
     }
   }
-}
-
-.text {
-  font-family: var(--Roboto);
-  color: var(--mantine-color-mainGreen-9);
-}
-
-.title {
-  font-weight: 900;
 }
 
 .description {
@@ -122,7 +113,11 @@
       margin-right: auto;
       left: 0;
       right: 0;
-      bottom: 5%;
+      bottom: 3%;
+    }
+
+    @media (max-width: $mantine-breakpoint-md) {
+      bottom: 6%;
     }
 
     @media (max-width: $mantine-breakpoint-sm) {
