--- a/src/components/ContactForm/ContactForm.module.scss
+++ b/src/components/ContactForm/ContactForm.module.scss
@@ -8,18 +8,22 @@
   margin-bottom: 8rem;
 
   h2 {
-    text-align: left;
+    text-align: left !important;
   }
 
   @media (max-width: $mantine-breakpoint-md) {
     align-items: center;
     flex-direction: column;
     gap: rem(40px);
+
+    h2 {
+      text-align: center !important;
+    }
   }
 }
 
 .contact_description {
-  max-width: 268px;
+  max-width: 300px;
 }
 
 .form {
@@ -27,21 +31,20 @@
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  max-width: rem(626px);
-  font-family: var(--Poppins);
+  max-width: rem(650px);
   width: 100%;
-  gap: rem(15px);
+  gap: 1rem;
 
   .line {
-    position: relative;
     width: 100%;
 
     label {
-      color: #132b13;
-      z-index: 2;
       font-weight: bold;
       font-family: var(--Poppins);
-      pointer-events: none;
+    }
+
+    textarea {
+      min-height: 200px;
     }
   }
 }
