--- a/src/components/AboutMeSection/AboutMeSection.module.scss
+++ b/src/components/AboutMeSection/AboutMeSection.module.scss
@@ -1,4 +1,4 @@
-.about_me {
+.section {
   display: flex;
   justify-content: center;
   align-items: flex-start;
@@ -15,7 +15,7 @@
   }
 }
 
-.about_me_img {
+.main_image {
   border-radius: 30px;
   height: auto;
   width: rem(394px);
@@ -25,7 +25,7 @@
   }
 }
 
-.about_me_description_container {
+.description {
   display: flex;
   justify-content: flex-start;
   align-items: start;
@@ -37,7 +37,7 @@
   }
 }
 
-.about_deco_1 {
+.leaf_image {
   position: absolute;
   bottom: -15%;
   right: 0;
