--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -39,7 +39,7 @@
   display: block;
   text-decoration: none;
   width: auto;
-  padding: 0;
+  padding: 10px 0px;
 
   &:hover {
     background-color: transparent;
