--- a/src/components/Hero/Hero.module.scss
+++ b/src/components/Hero/Hero.module.scss
@@ -35,6 +35,7 @@
   font-family: var(--hero-header);
   user-select: none;
   font-weight: normal !important;
+  letter-spacing: 1.25px;
 }
 
 .title1 {
