--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -12,26 +12,37 @@
 }
 
 .link {
-  display: block;
+  // display: block;
   line-height: 1.2;
   padding: rem(8px) rem(12px);
-  border-radius: var(--mantine-radius-sm);
   text-decoration: none;
   color: var(--mantine-color-white);
   font-weight: 600;
   transition: all 0.4s ease-in-out;
   width: auto;
 
+  .nav_icon {
+    // position: absolute;
+    transform: scale(0) rotate(-50deg);
+    transition: all 0.4s ease-in-out;
+  }
+
   &:hover {
-    box-shadow: inset 0px -1px 0px 0px var(--mantine-color-mainGreen-9);
-    border-radius: 0;
     background-color: transparent;
+    color: var(--mantine-color-mainGreen-11);
+
+    .nav_icon {
+      transform: scale(1) rotate(0deg);
+    }
   }
 
   &[data-active] {
-    box-shadow: inset 0px 0px 0px 1px var(--mantine-color-mainGreen-9);
-    color: var(--mantine-color-mainGreen-9);
+    color: var(--mantine-color-mainGreen-11);
     background-color: transparent;
+
+    .nav_icon {
+      transform: scale(1) rotate(0deg);
+    }
   }
 }
 
@@ -63,22 +74,49 @@
 }
 
 .drawerLink {
-  display: block;
+  // display: block;
   line-height: 1;
   padding: 0.5rem 1rem;
-  border-radius: var(--mantine-radius-sm);
+  width: 40%;
+  // border-radius: var(--mantine-radius-sm);
   text-decoration: none;
   font-weight: 600;
   transition: all 0.4s ease-in-out;
+  white-space: nowrap;
+  overflow: visible;
+
+  .nav_icon {
+    position: absolute;
+    display: block;
+    transform: scale(0) rotate(-50deg);
+    transition: all 0.4s ease-in-out;
+    // height: 100%;
+    margin: 0;
+    margin-inline-end: 0 !important;
+
+    img {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+    }
+  }
 
   &:hover {
-    box-shadow: inset 0px -1px 0px 0px var(--mantine-color-mainGreen-9);
-    border-radius: 0;
+    background-color: transparent;
+    color: var(--mantine-color-mainGreen-11);
+
+    .nav_icon {
+      transform: scale(1) rotate(0deg);
+    }
   }
 
   &[data-active] {
-    box-shadow: inset 0px 0px 0px 1px var(--mantine-color-mainGreen-9);
-    color: var(--mantine-color-mainGreen-9);
     background-color: transparent;
+    color: var(--mantine-color-mainGreen-11);
+
+    .nav_icon {
+      transform: scale(1) rotate(0deg);
+    }
   }
 }
