--- a/src/components/AboutMeSection/AboutMeSection.module.scss
+++ b/src/components/AboutMeSection/AboutMeSection.module.scss
@@ -1,26 +1,43 @@
+@use "../../theme/breakpoints.scss" as *;
+
 .section {
   display: flex;
   justify-content: center;
   align-items: flex-start;
   flex-direction: row;
   gap: rem(97px);
-  max-height: rem(538px);
+  min-height: rem(538px);
   position: relative;
   margin-bottom: 8rem;
+  padding: 2rem 0;
+  overflow: hidden;
 
-  @media (max-width: $mantine-breakpoint-md) {
+  @include md-down {
     flex-direction: column-reverse;
     align-items: center;
-    max-height: none;
+    gap: rem(50px);
+  }
+}
+
+.image_container {
+  transform-origin: center;
+  will-change: transform;
+
+  @include md-down {
+    width: 90%;
+    max-width: rem(500px);
   }
 }
 
 .main_image {
+  margin: 1rem;
   border-radius: 30px;
-  height: auto;
-  width: rem(394px);
+  width: auto;
+  max-height: 600px;
+  transition: transform 0.3s ease;
+  box-shadow: 0 10px 30px rgba(0, 0, 0, 0.2);
 
-  @media (max-width: $mantine-breakpoint-md) {
+  @include md-down {
     width: 100%;
   }
 }
@@ -32,20 +49,27 @@
   flex-direction: column;
   max-width: rem(626px);
 
-  @media (max-width: $mantine-breakpoint-md) {
+  @include md-down {
     align-items: center;
+    text-align: center;
+    width: 90%;
   }
 }
 
-.leaf_image {
+.leaf_container {
   position: absolute;
-  bottom: -15%;
-  right: 0;
-  width: auto !important;
-  height: 20vw;
-  max-height: 375px;
+  bottom: 0%;
+  right: 5%;
+  z-index: -1;
+  transform-origin: bottom right;
+  will-change: transform;
+}
 
-  @media (max-width: $mantine-breakpoint-md) {
+.leaf_image {
+  width: auto;
+  height: 200px;
+
+  @include md-down {
     display: none;
   }
 }
