--- a/src/components/Hero/Hero.module.scss
+++ b/src/components/Hero/Hero.module.scss
@@ -3,7 +3,7 @@
 }
 
 .container {
-  height: rem(615px);
+  min-height: 70vh;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
