--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -27,7 +27,7 @@
 
   &:hover {
     background-color: transparent;
-    color: var(--mantine-color-mainGreen-11);
+    color: #31582b;
 
     .nav_icon {
       transform: scale(1) rotate(0deg);
@@ -35,7 +35,7 @@
   }
 
   &[data-active] {
-    color: var(--mantine-color-mainGreen-11);
+    color: #31582b;
     background-color: transparent;
 
     .nav_icon {
@@ -105,7 +105,7 @@
 
   &:hover {
     background-color: transparent;
-    color: var(--mantine-color-mainGreen-11);
+    color: #31582b;
 
     .nav_icon {
       transform: scale(1) rotate(0deg);
@@ -114,7 +114,7 @@
 
   &[data-active] {
     background-color: transparent;
-    color: var(--mantine-color-mainGreen-11);
+    color: #31582b;
 
     .nav_icon {
       transform: scale(1) rotate(0deg);
