--- a/src/components/FoodSection/FoodSection.module.scss
+++ b/src/components/FoodSection/FoodSection.module.scss
@@ -40,13 +40,7 @@
 }
 
 .cards_section_overflow {
-  overflow: hidden;
-  // width: 100vw;
-  // margin-left: -2rem;
-
-  @media (max-width: 768px) {
-    // width: calc(100vw + 1rem);
-  }
+  overflow: inherit;
 }
 
 .small_card {
@@ -57,6 +51,7 @@
   height: rem(650px);
   max-height: rem(650px);
   flex-shrink: 0;
+  box-shadow: 0 10px 30px rgba(0, 0, 0, 0.2);
 
   @media (max-width: 1024px) {
     width: rem(400px);
